--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Selenium Tests
 on:
   push:
     branches:
-      - main  # Run tests when pushing to main branch
+      - main
   pull_request:
     branches:
-      - main  # Run tests on PRs to main branch
+      - main
 
 jobs:
   test:
@@ -19,24 +19,30 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11.4'  # Adjust as needed
+          python-version: '3.11.4'
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install selenium
 
-      - name: Download Chrome & WebDriver
+      - name: Install Chrome & WebDriver
         run: |
           sudo apt update
+          sudo apt purge -y google-chrome-stable || true  # ✅ Remove existing Chrome
           sudo apt install -y wget unzip
+          
           wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get install -f -y
+          
           CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d'.' -f1)
           wget -q "https://chromedriver.storage.googleapis.com/$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)/chromedriver_linux64.zip"
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/
           chmod +x /usr/local/bin/chromedriver
+
+      - name: Verify Chrome Installation
+        run: google-chrome --version
 
       - name: Run Selenium Tests
         run: python -m unittest discover -s . -p "test_quiz_pengupil.py"
